<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/menubackground"
    tools:context="com.example.quizapp.EndGame$PlaceholderFragment" >

    <TextView
        android:id="@+id/GameFinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/endgame"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/PlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GameFinished"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/play"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PlayAgain"
        android:layout_marginTop="50dp"
        android:layout_toLeftOf="@id/GameFinished"
        android:text="@string/Yes"
        android:onClick="playAgain" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@id/GameFinished"
        android:text="@string/No"
        android:onClick="playAgain" />

</RelativeLayout>
